--- a/catalog.html
+++ b/catalog.html
@@ -195,7 +195,7 @@
     <footer>
 
     	<div class="footer-top">
-    		<p><img src="img/index-logo-2.svg" width="200" height="100" alt="Логотип интернет-магазина технопоинт"></p> <!-- Логотип в футере -->
+    		<a class="header-logo" href="index.html">ТЕХНОМАРТ</a> <!-- Логотип в футере -->
 
       	<ul>
 	    		<li><a href="#">Компания</a></li>
@@ -231,7 +231,7 @@
         </ul>
 
         <p>Обратная связь: <a href="#"><b>mail@htmlacademy.ru</b></a></p>
-        <p>Разработано - <a href="https://htmlacademy.ru/intensive/htmlcss"><b>htmlacademy.ru</b></a></p>
+        <p>Разработано - <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
       </div>
     </footer>
   </body>
